style.css
/* ... */
h4 {
    font-family: "Roboto", sans-serif;
    font-size: 3.5rem;
    font-weight: 400;
    color: #0B1D23;
    opacity: .7;
    margin-left: 4.3rem;
}

h5 {
    font-family: "Roboto Condensed", sans-serif;
    font-size: 3rem;
    color: #000000;
    font-weight: 300;
    margin-top: 1.5rem;
    text-align: center;
}

p {
    font-family: "Roboto Condensed", sans-serif;
    font-size: 2.5rem;
    font-weight: 100;
    color: #FFFFFF;
    text-align: left;
    line-height: 1.1;
}

.contact-form {
    font-family: "Roboto Condensed";
    font-weight: 500;
    font-size: 2.5rem;
    color: #fafafa;
}

input,
textarea {
    color: #000;
}

#action-intro {
    font-family: "Roboto Condensed", sans-serif;
    font-size: 2rem;
    font-weight: 100;
    color: #FFFFFF;
    text-align: left;
    line-height: 1.1;
}

.panel-body {
    font-family: "News Cycle", sans-serif;
    font-size: 2rem;
    text-align: center;
    margin: 0 0;
    background-color: #f0fcf1;
}

.title {
    font-family: "Roboto Condensed", sans-serif;
    font-weight: 500;
    position: relative;
    top: 1rem;
    left: 2rem;
    text-align: left;
    font-size: 3rem;
}

.subtitle {
    font-family: "Roboto Condensed", sans-serif;
    font-weight: 400;
    font-size: 1.5rem;
    position: relative;
    top: 2rem;
    left: 6.5rem;
    text-align: left;
}

.facts-row {
    height: 30vh;
    font-family: "Roboto", sans-serif;
    font-size: 2rem;
    font-weight: 300;
    color: #FFFFFF;
    text-align: left;
    padding: .5rem;
}

.footer-text {
    position: relative;
    top: .3rem;
    font-family: "Barlow Semi Condensed", sans-serif;
    font-size: 2rem;
    font-weight: 200;
    opacity: .8;
    color: #000000;
    margin-left: 0px;
    margin-right: 0px;
    text-align: left;
    line-height: 1;
}

.contact-footer {
    color: #ffffff;
    opacity: .8;
}

/*Animations & Transitions*/

.fade-logos {
    opacity: .50;
}

.fade-logos:hover {
    opacity: 1;
}

.page-pads:before {
    content: '';
    position: absolute;
    top: 0px;
    left: 0px;
    width: 0px;
    height: 100%;
    background: rgba(0, 0, 0, 0.6);
    opacity: .3;
    border-radius: 5px;
    transition: all .2s step-start;
}

.page-pads:hover:before {
    width: 100%;
}

a:hover {
    color: #000000;
    text-decoration: none;
}

/*Images & Logos*/

#background {
    background-image: url("/images/ecwscale.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

.mccdodds-image {
    background-image: url("/images/mcdoddscropped.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.boyd-image {
    background-image: url("/images/killultaghcropped.png");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.nihe-image {
    background-image: url("/images/NIHE.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.bcc-image {
    background-image: url("/images/BCClogo.jpeg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.logo {
    background: url("../images/logo.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    margin-bottom: 3rem;
    min-height: 12.5rem;
}

.logo_PPR {
    height: 13rem;
    float: left;
    margin-right: 2rem;
}

.support-image {
    background-image: url("/images/UNsupport.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.media-image {
    background-image: url("/images/media.jpeg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.reports-image {
    background-image: url("/images/infograph.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.morehillview-image {
    background-image: url("/images/ECWHillview.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.foi-image {
    background-image: url("/images/foi.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    border: .25rem solid #a98bd7;
}

.resource-link {
    position: absolute;
    top: 80%;
    left: 75%;
}

/*Background Colours*/

.header-para-facts-color {
    background-color: #B8977E;
}

.header-para-impact-color {
    background-color: #FFBA5C;
}

.header-para-resources {
    background-color: #77D353;
}

.header-para-contactus {
    background-color: #4169e1;
}

.header-para-cando {
    background-color: #F95F62;
}

.ul-menu-color-facts {
    background-color: #B8977E;
    opacity: .75;
}

.ul-menu-color-impact {
    background-color: #FFBA5C;
    opacity: .75;
}

.ul-menu-color-can-do {
    background-color: #F95F62;
    opacity: .75;
}

.ul-menu-color-resources {
    background-color: #77D353;
    opacity: .75;
}

.modal-background {
    background-color: #f4e7e4;
    font-size: 1.7rem;
    color: #000000;
    line-height: 1.428571;
    font-family: "Roboto Condensed", sans-serif;
    z-index: 1050;
}

/*Nav Buttons*/

.fa-arrow-circle-o-left {
    color: #fafafa;
    position: fixed;
    top: 3%;
    left: 88%;
    z-index: 1;
    opacity: .8;
}

.fa-arrow-circle-o-left:hover {
    opacity: 1;
}

.fa-bars {
    color: #fafafa;
    position: fixed;
    top: 10%;
    left: 88%;
    z-index: 2;
    opacity: .8;
}

.fa-bars:hover {
    opacity: 1;
}

/*Modal*/

.entry-modal-button {
    font-family: "Roboto Condensed", sans-serif;
    font-weight: 500;
    opacity: .80;
    border: solid .1rem #9c816d;
    margin-bottom: 0;
    font-size: 2rem;
    position: absolute;
    top: 77%;
    left: 2%;
}

.entry-modal-button:hover {
    background-color: #976DD0;
}

.facts-button {
    background-color: #B8977E;
}

.resources-button {
    background-color: #77D353;
}
/* ... */

